--- a/index.html
+++ b/index.html
@@ -37,33 +37,39 @@
       ancillary role to audio, where sounds serve to amplify visual immersion.
       It is up to sound and music researchers to elaborate ways in which we can
       think natively about VR audio. This workshop aims to investigate the
-      concept of an audio-centric VR as a medium for musical expression, and
+      concept of an audio-first VR as a medium for musical expression, and
       identify multimodal experiences that focus on the auditory aspects of
       immersion rather than those that are ocular. Through a day-long workshop
       that involves presentations and demo sessions followed by round table
       discussions, the participants will collectively address such questions as:
       What is a VR experience that originates from sonic phenomena? How do we
-      behave and interact inside such experiences? What are the tools that we
+      behave and interact within such experiences? What are the tools that we
       have or need to create these experiences? What are the implications of an
-      audio-centric VR for musical expression?</p>
+      audio-centric VR for musical expression? As a result, the participants
+      will outline a position on what constitutes an audio-first VR from the
+      perspective of the NIME community.</p>
 
       <p>We seek abstract submissions that focus on the following topics among others:
         <li>Sonic virtual realities
         <li>Immersive sonification
         <li>Virtual interfaces for musical expression (VIMEs)
         <li>Creativity support tools for VR audio
-        <li>Visualizing an audio-centric VR
-        <li>Spatial audio systems for VR
+        <li>Visualizing an audio-first VR
+        <li>Spatial audio techniques for VR
         <li>Embodied interactions within virtual audio systems
         <li>Applications of computer music theory to VR
+        <li>Composing music for VR games and films
         <li>Sonic VR as assistive technology
-        <li>Histories of Sound in Virtual Environments
+        <li>Histories of sound in virtual environments
+
+      </p> The submitted abstracts and the proceedings of the workshop will be published
+      on the workshop website at audio1stVR.github.io.
 
       <p>Workshop structure:
         <li>9:00-12:00 – 15-minute presentations by the participants
         <li>12:00-13:00 – Lunch break
         <li>13:00-14:00 – Demo session (a room-scale VR system and a 4-channel audio system will be provided)
-        <li>14:00-17:00 – Discussion, elaborating the outline of a position
+        <li>14:00-17:00 – Discussion, identifying a preliminary framework for audio-first VRs
 
     </div>
   </div>
