--- a/index.html
+++ b/index.html
@@ -65,11 +65,22 @@
       </p> The submitted abstracts and the proceedings of the workshop will be published
       on the workshop website at audio1stVR.github.io.
 
-      <p>Workshop structure:
+      <div class="title">Workshop Structure</div>
         <li>9:00-12:00 – 15-minute presentations by the participants
         <li>12:00-13:00 – Lunch break
         <li>13:00-14:00 – Demo session (a room-scale VR system and a 4-channel audio system will be provided)
         <li>14:00-17:00 – Discussion, identifying a preliminary framework for audio-first VRs
+
+      <!-- <div class="title">Workshop Leaders</div>
+      <b>Anıl Çamcı</b> is an Assistant Professor of Performing Arts Technology at the
+      University of Michigan. His work investigates new tools and theories for
+      multimodal worldmaking using a variety of media ranging from electronic music to
+      virtual reality. Çamcı’s research has been
+      featured in leading journals, such as Organised Sound, Soundscape and IEEE CG&A.
+      He presented his work at top-tier conferences including ACM UIST, ACM CHI, IEEE
+      VR, ICMC and NIME. He has been granted several awards and scholarships,
+      including the Audio Engineering Society Fellowship, and the ACM CHI Artist
+      Grant. -->
 
     </div>
   </div>
