--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       </p> The submitted abstracts and the proceedings of the workshop will be published
       on the workshop website at audio1stVR.github.io. Maximum number of presenting participants
-      is 10. However, the workshop will be open to non-presenting participants as well.
+      is 10. However, attendance will be open to non-presenting participants within space limits.
 
       <div class="title">Workshop Structure</div>
         <li>9:00-12:00 – 15-minute presentations by the participants
