--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         <li>Sonic VR as assistive technology
         <li>Histories of sound in virtual environments
 
-      </p> The submitted abstracts and the proceedings of the workshop will be published
+      </p>Abstracts should be approximately 350 words, and include links to sounds, images and videos
+      when appropriate. The accepted abstracts and the proceedings of the workshop will be published
       on the workshop website at audio1stVR.github.io. Maximum number of presenting participants
       is 10. However, attendance also will be open to non-presenting participants within space limits.
 
