--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
         <li>Sonic VR as assistive technology
         <li>Histories of sound in virtual environments
 
-      </p>Abstracts should be approximately 350 words, and include links to sounds, images and videos
-      when appropriate. The accepted abstracts and the proceedings of the workshop will be published
-      on the workshop website at audio1stVR.github.io. Maximum number of presenting participants
-      is 10. However, attendance also will be open to non-presenting participants within space limits.
+      </p>Abstracts of approximately 350 words should be sent as a PDF file to
+      acamci@umich.edu with "NIME Workshop on Audio-first VR" included in the
+      subject line. The accepted abstracts and the proceedings of the workshop will
+      be published on the workshop website at audio1stVR.github.io. Maximum
+      number of presenting participants will be 10. However, attendance will be
+      open to non-presenting participants within space limits.
 
       <div class="title">Workshop Structure</div>
         <li>9:00-12:00 – 15-minute presentations by the participants
