--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       </p>Abstracts of approximately 350 words should be sent as a PDF file to
       acamci@umich.edu with "NIME Workshop on Audio-first VR" included in the
       subject line. The accepted abstracts and the proceedings of the workshop will
-      be published on the workshop website at audio1stVR.github.io. Maximum
-      number of presenting participants will be 10. However, attendance will be
+      be published on the workshop website at audio1stVR.github.io. Number of
+      presenting participants will be limited to 10. However, attendance will be
       open to non-presenting participants within space limits.
 
       <div class="title">Workshop Structure</div>
