--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="bio">
       <p>We are rapidly approaching the mass adoption of virtual reality as a
       consumer-oriented entertainment medium. Recent breakthroughs in
-      low-persistence monitors combined with modern head-tracking techniques
-      have enabled the design of head-mounted displays that offer plausible
+      low-persistence displays combined with modern head-tracking techniques
+      have enabled the design of head-mounted systems that offer plausible
       virtual experiences. The role of sound in establishing a convincing sense
       of immersion in such experiences has been acknowledged since the early
       days of VR. Morton Heilig’s 1960 patent for a stereoscopic television
