--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       behave and interact within such experiences? What are the tools that we
       have or need to create these experiences? What are the implications of an
       audio-centric VR for musical expression? As a result, the participants
-      will outline a position on what constitutes an audio-first VR from the
-      perspective of the NIME community.</p>
+      will outline a position on what constitutes an audio-first VR from a
+      NIME perspective.</p>
 
       <p>We seek abstract submissions that focus on the following topics among others:
         <li>Sonic virtual realities
