--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <div id="title">NIME Workshop on Audio-first VR</div>
+  <div id="title">NIME 2018 Workshop on Audio-first VR: Imagining the Future of
+  Virtual Environments for Musical Expression</div>
   <div id="bio-container">
     <div class="bio">
       <p>We are rapidly approaching the mass adoption of virtual reality as a
@@ -44,11 +45,11 @@
       that involves presentations and demo sessions followed by round table
       discussions, the participants will collectively address such questions as:
       What is a VR experience that originates from sonic phenomena? How do we
-      behave and interact within such experiences? What are the tools that we
-      have or need to create these experiences? What are the implications of an
-      audio-first VR for musical expression? As a result, the participants will
-      outline a position on what constitutes an audio-first VR from a NIME
-      perspective.</p>
+      act and interact within such experiences? What are the tools that we have
+      or need to create these experiences? What are the implications of an
+      audio-first VR for the future of musical expression? As a result of the
+      workshop, the participants will collaboratively outline a position on what
+      constitutes an audio-first VR from a NIME perspective.</p>
 
       <p>We seek abstract submissions that focus on the following topics among others:
         <li>Sonic virtual realities
@@ -63,29 +64,47 @@
         <li>Sonic VR as assistive technology
         <li>Histories of sound in virtual environments
 
-      </p>Abstracts of approximately 350 words should be sent as a PDF to
-      acamci@umich.edu with "NIME Workshop on Audio-first VR" included in the
-      subject line. The accepted abstracts and the proceedings of the workshop
-      will be published on the workshop website at audio1stVR.github.io. Number
-      of presenting participants will be limited to 10. However, attendance will
-      be open to non-presenting participants within space limits.
+      </p><b>Abstracts of approximately 350 words should be sent as a PDF file by April
+      27th to acamci@umich.edu with "NIME Workshop on Audio-first VR" included
+      in the subject line</b>. The accepted abstracts and the proceedings of the
+      workshop will be published on the workshop website at
+      audio1stVR.github.io. Number of presenting participants will be limited to
+      10. However, attendance will be open to non-presenting participants within
+      space limits. If you are already presenting a relevant paper or artwork at
+      NIME, you are welcome to submit an abstract in relation to that work to
+      participate in the workshop.
 
       <div class="title">Workshop Structure</div>
         <li>9:00-12:00 – 15-minute presentations by the participants
         <li>12:00-13:00 – Lunch break
         <li>13:00-14:00 – Demo session (an HMD system and 4-channel audio will be provided)
-        <li>14:00-17:00 – Think tank, group discussions; outlining a position on Audio-first VR
+        <li>14:00-17:00 – Group discussions; outlining a position on Audio-first VR
 
-      <!-- <div class="title">Workshop Leaders</div>
-      <b>Anıl Çamcı</b> is an Assistant Professor of Performing Arts Technology at the
-      University of Michigan. His work investigates new tools and theories for
-      multimodal worldmaking using a variety of media ranging from electronic music to
-      virtual reality. Çamcı’s research has been
-      featured in leading journals, such as Organised Sound, Soundscape and IEEE CG&A.
-      He presented his work at top-tier conferences including ACM UIST, ACM CHI, IEEE
-      VR, ICMC and NIME. He has been granted several awards and scholarships,
-      including the Audio Engineering Society Fellowship, and the ACM CHI Artist
-      Grant. -->
+      <div class="title">Workshop Leaders</div>
+      <b>Anıl Çamcı</b>  is an Assistant Professor of Performing Arts Technology
+      at the University of Michigan. His work investigates new tools and
+      theories for multimodal worldmaking using a variety of media ranging from
+      electronic music to virtual reality. Previously, he worked at the
+      University of Illinois at Chicago, where he led research projects on
+      human-computer interaction and immersive audio in virtual reality
+      contexts, and Istanbul Technical University, where he founded the Sonic
+      Arts Program. He completed his PhD at Leiden University in affiliation
+      with the Institute of Sonology in The Hague, and the Industrial Design
+      Department at Delft University of Technology. Çamcı’s research has been
+      featured in leading journals and conferences throughout the world. He has
+      been granted several awards, including the Audio Engineering Society
+      Fellowship, and the ACM CHI Artist Grant. [http://anilcamci.com]
+
+      <p><b>Rob Hamilton</b> is a composer and researcher, who explores the converging spaces
+      between sound, music, and interaction. His creative practice includes
+      mixed-reality performance works built within fully rendered, networked
+      game environments, procedural music engines and mobile musical ecosystems.
+      His research focuses on the cognitive implications of sonified musical
+      gesture and motion and the role of perceived space in the creation and
+      enjoyment of sound and music. Dr. Hamilton received his PhD from Stanford
+      University’s Center for Computer Research in Music and Acoustics (CCRMA)
+      and currently serves as an Assistant Professor of Music and Media at
+      Rensselaer Polytechnic Institute. [http://robhamilton.io]</p>
 
     </div>
   </div>
