--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   Virtual Environments for Musical Expression</div>
   <div id="bio-container">
     <div class="bio">
+
+      <p><b>June 3rd, 2018 at Virginia Tech, Blacksburg, VA.</b></p>
+
       <p>We are rapidly approaching the mass adoption of virtual reality as a
       consumer-oriented entertainment medium. Recent breakthroughs in
       low-persistence displays combined with modern head-tracking techniques
