--- a/index.html
+++ b/index.html
@@ -77,11 +77,97 @@
       NIME, you are welcome to submit an abstract in relation to that work to
       participate in the workshop.
 
-      <div class="title">Workshop Structure</div>
-        <li>9:00-12:00 – 15-minute presentations by the participants
-        <li>12:00-13:00 – Lunch break
-        <li>13:00-14:00 – Demo session (an HMD system and 4-channel audio will be provided)
-        <li>14:00-17:00 – Group discussions; outlining a position on Audio-first VR
+      <div class="title">Workshop Schedule</div>
+      <table class="tg" style="undefined;table-layout: fixed; width: 756px">
+<colgroup>
+<col style="width: 106px">
+<col style="width: 650px">
+</colgroup>
+  <tr>
+    <td class="tg-yw4l">09:00 - 09:20</td>
+    <td class="tg-yw4l">Welcome and Introductions</td>
+  </tr>
+  <tr>
+    <td class="tg-b7b8"></td>
+    <td class="tg-b7b8">Anıl Çamcı and Rob Hamilton</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">09:20 - 09:40</td>
+    <td class="tg-yw4l">ECOSONICO: Augmenting Sound and Defining Soundscapes in a Local Interactive Space</td>
+  </tr>
+  <tr>
+    <td class="tg-b7b8"></td>
+    <td class="tg-b7b8">José M. Mondragón, Adalberto Blanco, and Francisco Rivas</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">09:40 - 10:00</td>
+    <td class="tg-yw4l">Sonic Thinking in VR: Incorporating Sound into S.T.E.A.M Curriculum and Data-Driven Installations</td>
+  </tr>
+  <tr>
+    <td class="tg-b7b8"></td>
+    <td class="tg-b7b8">Melissa F. Clarke and Margaret Schedel</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">10:00 - 10:20</td>
+    <td class="tg-yw4l">On Standardization, Reproducibility, and Other Demons (of VR)</td>
+  </tr>
+  <tr>
+    <td class="tg-b7b8"></td>
+    <td class="tg-b7b8">Davide Andrea Mauro</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">10:20 - 10:40</td>
+    <td class="tg-yw4l">Chunity for Audio-first VR</td>
+  </tr>
+  <tr>
+    <td class="tg-b7b8"></td>
+    <td class="tg-b7b8">Jack Atherton and Ge Wang</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">10:40 - 11:00</td>
+    <td class="tg-yw4l">Sonic Cyborg Feminist Futures in Extended Realities</td>
+  </tr>
+  <tr>
+    <td class="tg-b7b8"></td>
+    <td class="tg-b7b8">Rachel Rome</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">11:00 - 11:20</td>
+    <td class="tg-yw4l">Adapting 3D Selection and Manipulation Techniques for Immersive Musical Interaction</td>
+  </tr>
+  <tr>
+    <td class="tg-b7b8"></td>
+    <td class="tg-b7b8">Florent Berthaut</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">11:20 - 11:40</td>
+    <td class="tg-yw4l">What Postmodal Processes Can Teach Us about Existing Mediums</td>
+  </tr>
+  <tr>
+    <td class="tg-b7b8"></td>
+    <td class="tg-b7b8">Josh Simmons</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">11:40 - 12:00</td>
+    <td class="tg-yw4l">Enhanced Virtual Reality (EVR) for Live Concert Experiences</td>
+  </tr>
+  <tr>
+    <td class="tg-b7b8"></td>
+    <td class="tg-b7b8">Chase Mitchusson and Edgar Berdahl</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">12:00 - 13:00</td>
+    <td class="tg-yw4l">Lunch Break</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">13:00 - 14:00</td>
+    <td class="tg-yw4l">Demo Sessions</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">14:00 - 16:00</td>
+    <td class="tg-yw4l">Group Discussion; Outlining a Position on Audio-first VR</td>
+  </tr>
+</table>
 
       <div class="title">Workshop Leaders</div>
       <b>Anıl Çamcı</b>  is an Assistant Professor of Performing Arts Technology
