--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         <li>Sonic VR as assistive technology
         <li>Histories of sound in virtual environments
 
-      </p><b>Abstracts of approximately 350 words should be sent as a PDF file by <strike>April
-      27th</strike> May 6th to acamci@umich.edu with "NIME Workshop on Audio-first VR" included
-      in the subject line</b>. The accepted abstracts and the proceedings of the
-      workshop will be published on the workshop website at
+      </p><b>Abstracts of approximately 350 words should be sent as a PDF file
+      by May 6th to acamci@umich.edu with "NIME Workshop on Audio-first VR"
+      included in the subject line</b>. The accepted abstracts and the
+      proceedings of the workshop will be published on the workshop website at
       audio1stVR.github.io. Number of presenting participants will be limited to
       10. However, attendance will be open to non-presenting participants within
       space limits. If you are already presenting a relevant paper or artwork at
