--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-  <div id="title">NIME 2018 Workshop on Audio-first VR: Imagining the Future of
-  Virtual Environments for Musical Expression</div>
+  <div id="title">Audio-first VR</div>
+  <div id="subtitle"> Imagining the Future of Virtual Environments for Musical Expression</div>
   <div id="bio-container">
     <div class="bio">
 
-      <p><b>June 3rd, 2018 at Virginia Tech, Blacksburg, VA.</b></p>
+      <p><span style="color: #00b8c6; font-size: 18px;">NIME 2018 Workshop, June 3rd, 2018 at Virginia Tech, Blacksburg, VA.</span></p>
 
       <p>We are rapidly approaching the mass adoption of virtual reality as a
       consumer-oriented entertainment medium. Recent breakthroughs in
