--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="bio-container">
     <div class="bio">
 
-      <p><span style="color: #00b8c6; font-size: 18px;">NIME 2018 Workshop, June 3rd, 2018 at Virginia Tech, Blacksburg, VA.</span></p>
+      <p><span style="color: #00b8c6; font-size: 18px;">NIME 2018 Workshop, June 3rd, 2018 at Virginia Tech, Blacksburg, VA</span></p>
 
       <p>We are rapidly approaching the mass adoption of virtual reality as a
       consumer-oriented entertainment medium. Recent breakthroughs in
