--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </tr>
   <tr>
     <td class="tg-yw4l">09:20 - 09:40</td>
-    <td class="tg-yw4l">ECOSONICO: Augmenting Sound and Defining Soundscapes in a Local Interactive Space</td>
+    <td class="tg-yw4l"><a href="abstracts/Mondragon_Blanco_Rivas.pdf" target="new">ECOSONICO: Augmenting Sound and Defining Soundscapes in a Local Interactive Space</a></td>
   </tr>
   <tr>
     <td class="tg-b7b8"></td>
@@ -101,7 +101,7 @@
   </tr>
   <tr>
     <td class="tg-yw4l">09:40 - 10:00</td>
-    <td class="tg-yw4l">Sonic Thinking in VR: Incorporating Sound into S.T.E.A.M Curriculum and Data-Driven Installations</td>
+    <td class="tg-yw4l"><a href="abstracts/Clarke_Schedel.pdf" target="new">Sonic Thinking in VR: Incorporating Sound into S.T.E.A.M Curriculum and Data-Driven Installations</a></td>
   </tr>
   <tr>
     <td class="tg-b7b8"></td>
@@ -109,7 +109,7 @@
   </tr>
   <tr>
     <td class="tg-yw4l">10:00 - 10:20</td>
-    <td class="tg-yw4l">On Standardization, Reproducibility, and Other Demons (of VR)</td>
+    <td class="tg-yw4l"><a href="abstracts/Mauro.pdf" target="new">On Standardization, Reproducibility, and Other Demons (of VR)</a></td>
   </tr>
   <tr>
     <td class="tg-b7b8"></td>
@@ -117,7 +117,7 @@
   </tr>
   <tr>
     <td class="tg-yw4l">10:20 - 10:40</td>
-    <td class="tg-yw4l">Chunity for Audio-first VR</td>
+    <td class="tg-yw4l"><a href="abstracts/Atherton_Wang.pdf" target="new">Chunity for Audio-first VR</a></td>
   </tr>
   <tr>
     <td class="tg-b7b8"></td>
@@ -125,7 +125,7 @@
   </tr>
   <tr>
     <td class="tg-yw4l">10:40 - 11:00</td>
-    <td class="tg-yw4l">Sonic Cyborg Feminist Futures in Extended Realities</td>
+    <td class="tg-yw4l"><a href="abstracts/Rome.pdf" target="new">Sonic Cyborg Feminist Futures in Extended Realities</a></td>
   </tr>
   <tr>
     <td class="tg-b7b8"></td>
@@ -133,7 +133,7 @@
   </tr>
   <tr>
     <td class="tg-yw4l">11:00 - 11:20</td>
-    <td class="tg-yw4l">Adapting 3D Selection and Manipulation Techniques for Immersive Musical Interaction</td>
+    <td class="tg-yw4l"><a href="abstracts/Berthaut.pdf" target="new">Adapting 3D Selection and Manipulation Techniques for Immersive Musical Interaction</a></td>
   </tr>
   <tr>
     <td class="tg-b7b8"></td>
@@ -141,7 +141,7 @@
   </tr>
   <tr>
     <td class="tg-yw4l">11:20 - 11:40</td>
-    <td class="tg-yw4l">What Postmodal Processes Can Teach Us about Existing Mediums</td>
+    <td class="tg-yw4l"><a href="abstracts/Simmons.pdf" target="new">What Postmodal Processes Can Teach Us about Existing Mediums</a></td>
   </tr>
   <tr>
     <td class="tg-b7b8"></td>
@@ -149,7 +149,7 @@
   </tr>
   <tr>
     <td class="tg-yw4l">11:40 - 12:00</td>
-    <td class="tg-yw4l">Enhanced Virtual Reality (EVR) for Live Concert Experiences</td>
+    <td class="tg-yw4l"><a href="abstracts/Mitchusson_Berdahl.pdf" target="new">Enhanced Virtual Reality (EVR) for Live Concert Experiences</a></td>
   </tr>
   <tr>
     <td class="tg-b7b8"></td>
